--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,16 @@
+.App-Main {
+  font-size: 10px;
+  padding: 1rem;
+}
+
 .App {
   text-align: center;
 }
+
+.MT-16{
+  margin-top: 1.6rem;
+}
+
 
 .App-logo {
   height: 40vmin;
