--- a/src/components/service/service.css
+++ b/src/components/service/service.css
@@ -1,19 +1,49 @@
 .avd {
-    background-color: #fffafb;
+    background-color: #e43b3b;
     margin: 1%;
     height: 250px;
+    border-radius: 4%;
 }
 
 li {
-    font-size: 18px;
-    line-height: 20px;
+    font-size: 20px;
+    line-height: 30px;
+    list-style-type: circle;
+    color: #ffff;
+    text-align: left;
+    margin-top: 15%;
+    font-weight: 400;
+
 }
+
+ul li::before {
+    content: "\2022";
+    color: #ffff;
+    font-weight: bold;
+    display: inline-block; 
+    width: 1em;
+    margin-left: -1em;
+  }
 
 .avd:hover {
     transform: scale(1.1);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .margin21 { 
     align-items: center;
     text-align: center;
+}
+
+body {
+    font-family: sans-serif;
+}
+
+.stitle {
+    color: #ffff;
+    font-size: 22px;
+}
+
+.ourservice{
+    color: #e43b3b;
 }
