--- a/template/style.css
+++ b/template/style.css
@@ -152,9 +152,9 @@ a {
 }
 
 .iconsize {
-    height: 16px;
-    width: 16px;
-    fill: #ffff;
+    height: 18px;
+    width: 18px;
+    fill: black;
 }
 
 
